Modified keyframe to prevent animation jump

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,7 +115,7 @@
       transform: translateX(0);
     }
     to {
-      transform: translateX(-100%);
+      transform: translateX(-100.55%);
     }
   }
 
